# cv_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agent-framework.mdc  bash-instruction.mdc  tests.mdc
docs/: CV_DISCOVERY_PIPELINE.md
docs/phases/: PHASE_0_FOUNDATIONS.md  PHASE_1_INGESTION_QDRANT.md  PHASE_2_RETRIEVAL_ONLY.md  PHASE_3_AGENT_WORKFLOW.md  PHASE_4_QUALITY_AND_OPERATIONS.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  storage.ts
frontend/src/api/: discover.ts
frontend/src/pages/: HomePage.tsx  ReportPage.tsx
frontend/src/types/: discover.ts
src/cv_agent/: __main__.py  config.py  foundry_openai.py  main.py  openai_endpoints.py
src/cv_agent/api/routes/: discover.py  health.py  retrieve.py
src/cv_agent/clients/: qdrant.py
src/cv_agent/discovery/: __init__.py  llm_client.py  merge.py  prompts.py  schemas.py  tools.py  workflow.py
src/cv_agent/ingestion/: chunk.py  constants.py  embed.py  extract.py  normalize.py  pdf_extract.py  qdrant_ingest.py
src/cv_agent/jobs/: cv_source.py  reindex.py
src/cv_agent/retrieval/: __init__.py  collapse.py  cv_document.py  models.py  search.py
